--- a/mediatek/kernel/drivers/common_detect/drv_init/Makefile
+++ b/mediatek/kernel/drivers/common_detect/drv_init/Makefile
@@ -10,6 +10,15 @@ ifeq ($(CONFIG_MTK_COMBO),y)
 	obj-y += fm_drv_init.o
 	obj-y += wlan_drv_init.o
 	
+ifeq ($(CONFIG_MTK_WLAN_SUPPORT), y)
+	ccflags-y += -DMTK_WLAN_SUPPORT
+	ifneq ($(filter "MT6620",$(CONFIG_MTK_WLAN_CHIP)),)
+		ccflags-y += -DMT6620
+	endif
+	ifneq ($(filter "MT6628",$(CONFIG_MTK_WLAN_CHIP)),)
+		ccflags-y += -DMT6628
+	endif
+endif
 endif
 
 else
