--- a/mediatek/kernel/drivers/conn_soc/common/core/Makefile
+++ b/mediatek/kernel/drivers/conn_soc/common/core/Makefile
@@ -6,6 +6,10 @@ ccflags-y += -I$(src)/../linux/include \
 						 -I$(src)/ \
 						 -I$(src)/../../../btif/inc \
 						 -I$(src)/../../../common_detect
+						 
+ccflags-y += -I$(MTK_CUSTOM_PATH)/kernel/drivers/eemcs/
+ccflags-y += -I$(MTK_CUSTOM_PATH)/kernel/drivers/conn_md/include
+
 obj-y += wmt_core.o \
          wmt_ctrl.o \
          wmt_func.o \
