--- a/mediatek/kernel/drivers/conn_soc/common/linux/pri/Makefile
+++ b/mediatek/kernel/drivers/conn_soc/common/linux/pri/Makefile
@@ -6,6 +6,11 @@ ccflags-y += -I$(src)/../../linux/include \
 						 -I$(src)/../ \
 						 -I$(src)/../../../../btif/inc \
 						 -I$(src)/../../../../common_detect
+
+ccflags-y += -I$(MTK_CUSTOM_PATH)/kernel/drivers/eemcs/
+ccflags-y += -I$(MTK_CUSTOM_PATH)/kernel/drivers/conn_md/include
+
+ccflags-y += -DWMT_CREATE_NODE_DYNAMIC=1
 obj-y += stp_btif.o \
          stp_dbg.o \
          stp_exp.o \
