--- a/mediatek/kernel/drivers/conn_soc/common/linux/pub/Makefile
+++ b/mediatek/kernel/drivers/conn_soc/common/linux/pub/Makefile
@@ -5,10 +5,16 @@ ccflags-y += -I$(src)/../../linux/include \
 						 -I$(src)/../../include \
 						 -I$(src)/../ \
 						 -I$(src)/../../../../common_detect
+						 
+ccflags-y += -I$(MTK_CUSTOM_PATH)/kernel/drivers/eemcs/
+ccflags-y += -I$(MTK_CUSTOM_PATH)/kernel/drivers/conn_md/include
+ccflags-y += -DWMT_CREATE_NODE_DYNAMIC=1
+
 obj-y += osal.o \
          bgw_desense.o \
          stp_chrdev_bt.o \
          stp_chrdev_gps.o \
-         wmt_chrdev_wifi.o
+         wmt_chrdev_wifi.o \
+         wmt_idc.o
 
 endif
